# Novel2Script

./: .env.example  LICENSE  README.md  index.html  pyproject.toml
docs/: technical-design-v0.1.md  yaml-schema-v0.1.md
examples/: sample_novel.txt
src/novel2script/: __init__.py  adaptation_planner.py  chapter_segmenter.py  cli.py  composer.py  errors.py  input_parser.py  models.py  online_client.py  pipeline.py  quality_rewriter.py  scene_writer.py  server.py  story_analyzer.py  text_utils.py  validator.py  yaml_writer.py
tests/: test_pipeline.py  test_server.py  test_web_converter.js
web/css/: styles.css
web/js/: converter.js  main.js
